# webview-bundle

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .yarnrc.yml  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  alpine.Dockerfile  artifacts.json  biome.json  debian-aarch64.Dockerfile  debian.Dockerfile  docker-compose.yaml  justfile  lefthook.yml  package.json  releases.json  rustfmt.toml  taplo.toml  tsconfig.json  vitest.workspace.json  vitest.workspace.mts  vitest.workspace.ts  xtask.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/free-disk-space/: action.yaml
.github/actions/node-setup/: action.yaml
.github/actions/run-docker/: action.yaml
.github/actions/rust-setup/: action.yaml
.github/actions/tauri-linux-setup/: action.yaml
.github/actions/yarn-setup/: action.yaml
.github/workflows/: ci.yaml  docker.yaml  prepare-release.yaml  prepare_release.yaml  pull_request.yaml  release.yaml  website.yaml
bench/electron/: index.bench.ts  package.json  vitest.config.ts  vitest.global-setup.ts
bench/fixtures/: .gitignore
bench/fixtures/bundles/: manifest.json  versions.json
bench/fixtures/next/: package.json  tailwind.config.ts  tsconfig.json
bench/fixtures/react/: package.json
bench/tools/: package.json
bench/tools/src/: fixtures.ts
benchmarks/electron/: index.bench.ts  package.json  vitest.config.mts  vitest.global-setup.mts  vitest.global-setup.ts
benchmarks/fixtures/big/: package.json  vite.config.ts
benchmarks/fixtures/next/: next.config.ts  package.json  tsconfig.json
benchmarks/fixtures/react/: package.json
benchmarks/node/: create.bench.ts  package.json  vitest.global-setup.ts
benchmarks/node-bining/: index.bench.ts  package.json  vitest.config.ts  vitest.global-setup.mts  vitest.global-setup.ts
benchmarks/tools/: package.json
benchmarks/tools/src/: fixtures.ts
crates/cli/src/: logging.rs  prelude.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: builder.rs  bundle.rs  checksum.rs  decoder.rs  error.rs  header.rs  index.rs  lib.rs  reader.rs  version.rs  writer.rs
crates/core/src/router/: local.rs  mod.rs  router.rs
crates/loader/: Cargo.toml  README.md
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: async_runtime.rs  error.rs  fetcher.rs  lib.rs  mime_type.rs  source.rs  uri.rs
crates/protocol/src/protocol/: bundle.rs  local.rs  mod.rs  protocol.rs
crates/protocol/tests/fixtures/: nextjs.wvb  react.wvb
crates/remote/: Cargo.toml  README.md
crates/remote/src/: aws.rs  builder.rs  common.rs  config.rs  error.rs  github.rs  lib.rs  opendal.rs  remote.rs  s3.rs  vercel.rs
crates/remote/src/uploader/: mod.rs  s3.rs
crates/remote/tests/: smoke.rs
crates/tauri/: Cargo.toml  README.md  build.rs
crates/tauri/permissions/autogenerated/: reference.md
crates/tauri/permissions/autogenerated/commands/: ping.toml
crates/tauri/src/: commands.rs  config.rs  desktop.rs  error.rs  lib.rs
crates/updater/: Cargo.toml  README.md
crates/webview-bundle/: CHANGELOG.md  Cargo.toml  README.md
crates/webview-bundle-cli/: Cargo.toml  README.md
crates/webview-bundle-cli/src/: lib.rs  main.rs  options.rs  panic.rs
crates/webview-bundle-cli/src/commands/: bundle.rs  extract.rs  mod.rs  pack.rs
crates/webview-bundle-cli/tests/: main.rs
crates/webview-bundle-tauri/: CHANGELOG.md  Cargo.toml
crates/webview-bundle-tauri/src/: cache.rs  config.rs  error.rs  lib.rs  loader.rs
crates/webview-bundle/src/: builder.rs  bundle.rs  decoder.rs  encoder.rs  error.rs  lib.rs
examples/electron-forge-vite/: .gitignore  README.md  forge.config.ts  install.mjs  package-lock.json  package.json  preinstall.mjs  tsconfig.json  vite.main.config.ts
examples/electron-simple/: .gitignore  README.md  package.json
examples/remote-aws-with-pulumi/: Pulumi.yaml  README.md  index.ts  package.json
examples/remote-cloudflare-with-pulumi/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
examples/tauri-simple/: .gitignore  Cargo.toml  package.json  tauri.conf.json  tsconfig.node.json  vite.config.ts
examples/tauri-simple/bundles/: out_1.0.0.wvb
examples/tauri-simple/src/: App.tsx  main.rs  main.tsx
examples/tauri-simple/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-simple/src-tauri/src/: lib.rs  main.rs
website/: .gitignore  README.md  cloudflare-env.d.ts  next.config.ts  package.json  tsconfig.json  wrangler.jsonc
website/lib/: layout.shared.tsx
xtask/: Cargo.toml  action.ts  cargo-toml.ts  changelog.ts  changes.ts  child_process.ts  cli.ts  config.ts  console.ts  consts.ts  conventional-commit.spec.ts  conventional-commit.ts  git.ts  out-schema.mts  out-schema.ts  package.json  package.ts  staged.ts  tsconfig.json  version.ts  versioned-file.ts  versioned-git-tag.ts  workspaces.ts
xtask-1/: README.md
xtask-1/src/: github.ts  index.ts
xtask-ts/: action.ts  cli.ts  package.json  version.ts  versioned-file.ts
xtask-ts/commands/: release-command.ts
xtask/.gen/: staged.json
xtask/.scripts/: create-schema.ts
xtask/commands/: artifacts-merge-command.ts  artifacts-merge.ts  artifacts-napi-command.ts  artifacts-napi.ts  artifacts-spread.ts  attw.ts  napi-artifacts.ts  napi-build.ts  prepare-release.ts  release-command.ts  release.ts
xtask/src/: actions.rs  cargo.rs  changelog.rs  changes.rs  cli.rs  config.rs  conventional_commit.rs  error.rs  exec.rs  fsUtils.ts  gitUtils.ts  github.rs  index.ts  macros.rs  main.rs  package.rs  version.rs  versioned_git_tag.rs  workspaceUtils.ts
xtask/src/artifacts/: config.ts
xtask/src/build-napi/: BuildNApiCommand.ts
xtask/src/commands/: artifacts.rs  mod.rs  release.rs  schema.rs
xtask/src/release/: PrepareReleaseCommand.ts  PrepareReleasePRCommand.ts  ReleaseCommand.ts  action.ts  change.ts  changelog.ts  changes.ts  config.ts  conventionalCommit.spec.ts  conventionalCommit.ts  package.ts  versionedFile.ts  versioning.ts
xtask/src/versioned_file/: cargo.rs  mod.rs  package_json.rs  package_manager.rs  versioned_file.rs
(+49 files in other folders)
