[workspace]
members  = ["crates/*", "packages/node-binding", "packages/electron-binding", "examples/tauri-simple/src-tauri"]
resolver = "2"

[workspace.dependencies]
async-trait             = "0.1"
bincode                 = "2.0.1"
bytes                   = { version = "1" }
dashmap                 = "7.0.0-rc2"
http                    = { version = "1" }
infer                   = "0.19.0"
lz4_flex                = "0.11.3"
napi                    = { version = "3.2.4", default-features = false, features = ["napi3", "async"] }
napi-build              = "2.2.3"
napi-derive             = "3.2.4"
percent-encoding        = "2.3.2"
reqwest                 = { version = "0.12" }
serde                   = "1.0"
serde_json              = "1.0"
tauri                   = "2.8.5"
tauri-build             = "2.4.1"
tauri-plugin            = "2.4.0"
thiserror               = "2"
tiny_http               = "0.12.0"
tokio                   = "1.47.1"
twox-hash               = "2.1.0"
webview-bundle          = { version = "0.0.0", path = "./crates/core" }
webview-bundle-protocol = { version = "0.0.0", path = "./crates/protocol" }
webview-bundle-tauri    = { version = "0.0.0", path = "./crates/tauri" }

[profile.release]
lto   = true
strip = "symbols"
