[workspace]
members  = ["packages/core", "packages/node", "examples/tauri-simple/src-tauri"]
resolver = "2"

[workspace.dependencies]
async-trait          = "0.1"
base64ct             = "1.8.0"
bincode              = "2.0.1"
bytes                = { version = "1" }
dashmap              = "7.0.0-rc2"
ed25519-dalek        = "2.2.0"
futures-util         = "0.3.31"
http                 = { version = "1" }
infer                = "0.19.0"
lz4_flex             = "0.11.3"
napi                 = "=3.5.2"
napi-build           = "=2.3.1"
napi-derive          = "=3.3.3"
opendal              = "0.54"
p256                 = "0.13.2"
p384                 = "0.13.1"
percent-encoding     = "2.3.2"
reqwest              = { version = "0.12", default-features = false }
rsa                  = "0.9.8"
serde                = "1.0"
serde_json           = "1.0"
sha3                 = "0.10.8"
tauri                = "2.8.5"
tauri-build          = "2.4.1"
tauri-plugin         = "2.4.0"
thiserror            = "2"
tiny_http            = "0.12.0"
tokio                = "1.47.1"
twox-hash            = "2.1.0"
urlencoding          = "2.1.3"
webview-bundle       = { version = "0.0.0", path = "./packages/core" }
webview-bundle-node  = { version = "0.0.0", path = "./packages/node" }
webview-bundle-tauri = { version = "0.0.0", path = "./packages/tauri" }

[profile.release]
lto   = true
strip = "symbols"
