[package]
authors      = ["Seokju Na <seokju.me@gmail.com>"]
description  = "TBD"
edition      = "2021"
license      = "MIT"
name         = "webview-bundle"
repository   = "https://github.com/seokju-na/webview-bundle"
rust-version = "1.85.0"
version      = "0.0.0"

[lib]
bench   = false
doctest = false

[dependencies]
bincode   = { workspace = true }
http      = { workspace = true }
lz4_flex  = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true, optional = true, features = ["io-util"] }
twox-hash = { workspace = true, features = ["serialize"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
async = ["tokio"]
