[package]
authors      = ["Seokju Na <seokju.me@gmail.com>"]
description  = "TBD"
edition      = "2021"
license      = "MIT"
name         = "webview-bundle-protocol"
repository   = "https://github.com/seokju-na/webview-bundle"
rust-version = "1.75"
version      = "0.0.0"

[lib]
bench   = false
doctest = false

[dependencies]
bytes          = { workspace = true }
reqwest        = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["fs", "io-util"] }
webview-bundle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
