[package]
authors      = ["Seokju Na <seokju.me@gmail.com>"]
description  = "TBD"
edition      = "2021"
license      = "MIT"
name         = "webview-bundle-remote"
repository   = "https://github.com/seokju-na/webview-bundle"
rust-version = "1.85.0"
version      = "0.0.0"

[dependencies]
async-trait    = { workspace = true }
opendal        = { workspace = true, optional = true }
reqwest        = { workspace = true, default-features = false, features = ["rustls-tls", "json", "hickory-dns"] }
serde          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true, features = ["rt", "rt-multi-thread"] }
urlencoding    = { workspace = true }
webview-bundle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
github = []
s3     = ["opendal", "opendal/services-s3"]
vercel = ["opendal", "opendal/services-vercel-blob"]
