[package]
authors      = ["Seokju Na <seokju.me@gmail.com>"]
description  = "TBD"
edition      = "2021"
license      = "MIT"
name         = "webview-bundle-remote"
repository   = "https://github.com/seokju-na/webview-bundle"
rust-version = "1.85.0"
version      = "0.0.0"

[dependencies]
async-trait    = { workspace = true }
futures-util   = { workspace = true }
opendal        = { workspace = true, optional = true }
reqwest        = { workspace = true, default-features = false, features = ["rustls-tls", "json", "hickory-dns", "stream"] }
serde          = { workspace = true }
thiserror      = { workspace = true }
urlencoding    = { workspace = true }
webview-bundle = { workspace = true, features = ["async"] }

[dev-dependencies]
skipif = { workspace = true }
tokio  = { workspace = true, features = ["full"] }

[features]
_opendal    = ["dep:opendal"]
uploader-s3 = ["_opendal", "opendal/services-s3"]
