[package]
authors      = ["Seokju Na <seokju.me@gmail.com>"]
description  = "TBD"
edition      = "2021"
license      = "MIT"
links        = "webview-bundle-tauri"
name         = "webview-bundle-tauri"
repository   = "https://github.com/seokju-na/webview-bundle"
rust-version = "1.77.2"
version      = "0.0.0"

[dependencies]
serde                   = { workspace = true }
tauri                   = { workspace = true, features = ["unstable"] }
thiserror               = { workspace = true }
webview-bundle-protocol = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
