[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle-updater"
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0"

[dependencies]
thiserror      = { workspace = true }
tokio          = { workspace = true }
webview-bundle = { workspace = true }
