[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle-cli"
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0"

[[bin]]
name = "webview-bundle"
path = "./src/main.rs"

[dependencies]
webview-bundle = { workspace = true }

anyhow             = "1"
async-walkdir      = "2.0.0"
biome_console      = "0.5.7"
bpaf               = { version = "0.9.14", features = ["derive"] }
futures            = "0.3.30"
pathdiff           = "0.2.1"
tokio              = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "macros"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
