[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle-cli"
publish     = true
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0"

[[bin]]
name = "webview-bundle-cli"
path = "./src/main.rs"

[dependencies]
webview-bundle = { workspace = true }

anyhow             = { workspace = true }
async-walkdir      = "2.0.0"
biome_console      = { workspace = true }
bpaf               = { workspace = true }
futures            = "0.3.30"
human_bytes        = { version = "0.4.3", default-features = false }
pathdiff           = "0.2.1"
tokio              = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "macros", "io-std", "io-util"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

[dev-dependencies]
rand = "0.8.5"
