[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle-tauri"
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0"

[dependencies]
webview-bundle = { workspace = true }

async-trait   = { workspace = true }
buildstructor = "0.5.4"
tauri         = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
