[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle-tauri"
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0-next.123"

[dependencies]
async-trait    = { workspace = true }
buildstructor  = "0.5.4"
lru            = { version = "0.12.5", optional = true }
mime_guess     = { workspace = true }
tauri          = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
webview-bundle = { workspace = true }

[features]
cache-lru = ["dep:lru"]
