[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "TBD"
edition     = "2021"
license     = "MIT"
name        = "webview-bundle"
repository  = "https://github.com/seokju-na/webview-bundle"
version     = "0.0.0-next.123"

[lib]
bench   = false
doctest = false

[dependencies]
bincode   = { workspace = true }
lz4_flex  = { workspace = true }
thiserror = { workspace = true }
