[package]
authors     = ["Seokju Na <seokju.me@gmail.com>"]
description = "A Simple Tauri App"
edition     = "2021"
name        = "example-tauri-simple"
publish     = false
version     = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name       = "tauri_lib"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tauri                = { workspace = true, features = [] }
webview-bundle-tauri = { workspace = true }
